--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="app">
 
                   <ul>
-                        <li v-for="email in email">
+                        <li v-for="email in email" v-show="visibility">
                               {{ email }}
                         </li>
                   </ul>
